deploy/dev/bug-scrub-web-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bug-scrub-web
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: bug-scrub-web
        image: img.hephy.pro/fluxcd/flux-pr-review:main-b4d4006e-1656789314 # {"$imagepolicy": "bug-scrub:latest-any"}
