deploy/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bug-scrub-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: bug-scrub.dev.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: bug-scrub-web
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bug-scrub.dev.hephy.pro
    secretName: bug-scrub-tls
